<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailMovieActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_movie_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/iv_detail_movie_poster"
                android:layout_width="160dp"
                android:layout_height="240dp"
                android:background="@android:color/holo_purple"
                android:contentDescription="@string/detail_poster"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_txt_title_detail_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/title"
                app:layout_constraintStart_toEndOf="@+id/iv_detail_movie_poster"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_txt_title_detail_movie"
                app:layout_constraintTop_toBottomOf="@+id/tv_txt_title_detail_movie"
                tools:text="Bohemian Rhapsody" />

            <TextView
                android:id="@+id/tv_txt_rating_detail_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/rating"
                app:layout_constraintStart_toStartOf="@+id/tv_txt_title_detail_movie"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_title" />

            <TextView
                android:id="@+id/tv_detail_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_txt_title_detail_movie"
                app:layout_constraintTop_toBottomOf="@+id/tv_txt_rating_detail_movie"
                tools:text="7.9" />

            <TextView
                android:id="@+id/tv_txt_language_detail_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/language"
                app:layout_constraintStart_toStartOf="@+id/tv_txt_title_detail_movie"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_rating" />

            <TextView
                android:id="@+id/tv_detail_movie_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_txt_title_detail_movie"
                app:layout_constraintTop_toBottomOf="@+id/tv_txt_language_detail_movie"
                tools:text="en" />

            <TextView
                android:id="@+id/tv_txt_releasedate_detail_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/release_date"
                app:layout_constraintStart_toStartOf="@+id/tv_txt_title_detail_movie"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_language" />

            <TextView
                android:id="@+id/tv_detail_movie_releasedate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_txt_title_detail_movie"
                app:layout_constraintTop_toBottomOf="@+id/tv_txt_releasedate_detail_movie"
                tools:text="2019-06-19" />

            <TextView
                android:id="@+id/tv_txtoverview_movie_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_movie_poster"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/overview"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_detail_movie_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/tv_txtoverview_movie_detail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock 'n' roll band Queen in 1970. Hit songs become instant classics. When Mercury's increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess."/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</LinearLayout>